Add mobile view styles for navigation

--- a/places.html
+++ b/places.html
@@ -64,6 +64,16 @@ nav a:hover{
     color:rgb(29, 180, 180);
 
 }
+        /* Mobile View */
+@media(max-width:768px){
+    nav{
+        flex-direction:column;   /* Stack vertically */
+    }
+
+    nav a{
+        width:100%;              /* Full width buttons */
+    }
+}
     </style>
 </head>
 <body>
